--- a/css/style.css
+++ b/css/style.css
@@ -1,62 +1,108 @@
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url('https://fonts.googleapis.com/icon?family=Roboto');
+
 /* Extra small devices (portrait phones, less than 576px) */
 * {
   font-family: arial, sans-serif;
+  box-sizing: border-box;
 }
 
 main {
-  box-sizing: border-box;
   width: 100%;
   height: 100vh;
 }
 
+#overlay-inner-container {
+  height: 100%;
+}
+
+
+
+
+.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 5em;
+  height: 5em;
+}
+
+.loader {
+  z-index: 10;
+  margin: 60px auto;
+  font-size: 10px;
+  position: relative;
+  text-indent: -9999em;
+  border-top: .5em solid rgba(255, 255, 255, 0.2);
+  border-right: .5em solid rgba(255, 255, 255, 0.2);
+  border-bottom: .5em solid rgba(255, 255, 255, 0.2);
+  border-left: .5em solid #9e9e9e;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
+}
+
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
+  #overlay-loader {
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(255, 255, 255, .90);
+  }
 
-
-
-
+  #list-container {
+    position: absolute;
+    right: 30px;
+    top: 30px;
+    z-index: 1;
+    width: 250px;
+    box-shadow: 2px 2px 40px rgba(0, 0, 0, .2);
+    background-color: white;
+  }
 }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-
-
-
-  #map {
-    width: 100%;
-    height: 100vh;
-  }
-
   #list-container {
-    z-index: 1;
-    box-shadow: 2px 2px 35px rgba(0, 0, 0, .20);
-    background-color: white;
+    width: 325px;
+    height: 60%;
   }
 
   #accident-list {
-    height: 100vh;
+    height: 85%;
     overflow-y: scroll;
   }
-
-
-
-
-
 }
 
 /* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) {
-
-
-
-
-}
+@media (min-width: 992px) {}
 
 /* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
-
-
-
-
-}
+@media (min-width: 1200px) {}
